--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Publish to registry
         uses: docker/build-push-action@v1
         with:
-          repository: scarsz/audrey
+          repository: scarsz/marina
           registry: registry.scarsz.me:443
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
