--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,16 @@
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.32</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.alexheretic</groupId>
+            <artifactId>dynamics</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
 </project>
