--- a/pom.xml
+++ b/pom.xml
@@ -127,9 +127,24 @@
             <version>1.1.1</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.29</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.alexheretic</groupId>
             <artifactId>dynamics</artifactId>
             <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin</artifactId>
+            <version>4.1.1</version>
         </dependency>
     </dependencies>
 
