--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,12 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.4.0_352</version>
+            <version>5.0.0-beta.12</version>
         </dependency>
         <dependency>
             <groupId>me.scarsz</groupId>
             <artifactId>jdaappender</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
